[package]
name = "train_server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
csv = "1.4.0"
futures = "0.3.31"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.3.10"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
